5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1671_1104.log
== TEST (2019-04-29 00:43:24) 
-- CODE:
# Intervalo 1: 
a = int(input("a: "))
b = int(input("b: "))

#intervalo 2
c = int(input("c: "))
d = int(input("d: "))

if b >= a and d >= c:
	if (c >= a and c <= d) or (d >= a and d <= b):
		print(1)
	else:
		print(0)
else:
	print(-1)

		Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.


-- ERROR:
File "XXXX", line 17
    Não teste tudo no final, pois fica mais difícil de identificar erros.
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 00:44:10) 
-- CODE:
# Intervalo 1: 
a = int(input("a: "))
b = int(input("b: "))

#intervalo 2
c = int(input("c: "))
d = int(input("d: "))

if b >= a and d >= c:
	if (c >= a and c <= d) or (d >= a and d <= b):
		print(1)
	else:
		print(0)
else:
	print(-1)


-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 00:44:42) 
-- CODE:
# Intervalo 1: 
a = int(input("a: "))
b = int(input("b: "))

#intervalo 2
c = int(input("c: "))
d = int(input("d: "))

if b >= a and d >= c:
	if (c >= a and c <= d) or (d >= a and d <= b):
		print(1)
	else:
		print(0)
else:
	print(-1)


-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 00:45:22) 
-- CODE:
# Intervalo 1: 
a = int(input("a: "))
b = int(input("b: "))
#intervalo 2
c = int(input("c: "))
d = int(input("d: "))

if b >= a and d >= c:
	if (c >= a and c <= d) or (d >= a and d <= b):
		print(1)
	else:
		print(0)
else:
	print(-1)


-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 00:45:29) 
-- CODE:
# Intervalo 1: 
a = int(input("a: "))
b = int(input("b: "))
#intervalo 2
c = int(input("c: "))
d = int(input("d: "))

if b >= a and d >= c:
	if (c >= a and c <= d) or (d >= a and d <= b):
		print(1)
	else:
		print(0)
else:
	print(-1)


-- EXECUTION TIME:
0.138806
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
1
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:

-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
-1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 00:45:32) 
-- CODE:
# Intervalo 1: 
a = int(input("a: "))
b = int(input("b: "))
#intervalo 2
c = int(input("c: "))
d = int(input("d: "))

if b >= a and d >= c:
	if (c >= a and c <= d) or (d >= a and d <= b):
		print(1)
	else:
		print(0)
else:
	print(-1)


-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 00:47:04) 
-- CODE:
# Intervalo 1: 
a = float(input("a: "))
b = int(input("b: "))
#intervalo 2
c = int(input("c: "))
d = int(input("d: "))

if b >= a and d >= c:
	if (c >= a and c <= d) or (d >= a and d <= b):
		print(1)
	else:
		print(0)
else:
	print(-1)


-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 00:47:37) 
-- CODE:
# Intervalo 1: 
a = float(input("a: "))
b = float(input("b: "))
#intervalo 2
c = float(input("c: "))
d = float(input("d: "))

if b >= a and d >= c:
	if (c >= a and c <= d) or (d >= a and d <= b):
		print(1)
	else:
		print(0)
else:
	print(-1)


-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 00:47:57) 
-- CODE:
# Intervalo 1: 
a = float(input("a: "))
b = float(input("b: "))
#intervalo 2
c = float(input("c: "))
d = float(input("d: "))

if b >= a and d >= c:
	if (c >= a and c <= d) or (d >= a and d <= b):
		print(1)
	else:
		print(0)
else:
	print(-1)


-- EXECUTION TIME:
0.128068
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
1
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
1
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
-1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 00:49:28) 
-- CODE:
# Intervalo 1: 
a = float(input("a: "))
b = float(input("b: "))
#intervalo 2
c = float(input("c: "))
d = float(input("d: "))
print("Entradas:", a, ".", b, ",", c, ",", d)
if b >= a and d >= c:
	if (c >= a and c <= d) or (d >= a and d <= b):
		print(1)
	else:
		print(0)
else:
	print(-1)


-- OUTPUT:
Entradas: 1.0 . 2.0 , 4.0 , 5.0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 00:49:46) 
-- CODE:
# Intervalo 1: 
a = float(input("a: "))
b = float(input("b: "))
#intervalo 2
c = float(input("c: "))
d = float(input("d: "))
print("Entradas:", a, ".", b, ",", c, ",", d)
if b >= a and d >= c:
	if (c >= a and c <= d) or (d >= a and d <= b):
		print(1)
	else:
		print(0)
else:
	print(-1)


-- EXECUTION TIME:
0.210096
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Entradas: 1.0 . 2.0 , 4.0 , 5.0
1
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Entradas: 1.5 . 5.0 , 2.5 , 3.0
1
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Entradas: -1.0 . -3.0 , 1.0 , 3.0
-1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 00:52:31) 
-- CODE:
# Intervalo 1: 
a = float(input("a: "))
b = float(input("b: "))
#intervalo 2
c = float(input("c: "))
d = float(input("d: "))
print("Entradas: intervalo 1:", a, ".", b, "Intervalo 2:", c, ",", d)
if b >= a and d >= c:
	if (c >= a and c <= d) or (d >= a and d <= b):
		print(1)
	else:
		print(0)
else:
	print(-1)


-- OUTPUT:
Entradas: intervalo 1: 1.0 . 2.0 Intervalo 2: 4.0 , 5.0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 00:52:52) 
-- CODE:
# Intervalo 1: 
a = float(input("a: "))
b = float(input("b: "))
#intervalo 2
c = float(input("c: "))
d = float(input("d: "))
print("Entradas: intervalo 1:", a, ".", b, "Intervalo 2:", c, ",", d)
if b >= a and d >= c:
	if (c >= a and c <= d) or (d >= a and d <= b):
		print(1)
	else:
		print(0)
else:
	print(-1)


-- EXECUTION TIME:
0.134296
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Entradas: intervalo 1: 1.0 . 2.0 Intervalo 2: 4.0 , 5.0
1
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Entradas: intervalo 1: 1.5 . 5.0 Intervalo 2: 2.5 , 3.0
1
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Entradas: intervalo 1: -1.0 . -3.0 Intervalo 2: 1.0 , 3.0
-1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 00:53:56) 
-- CODE:
# Intervalo 1: 
a = float(input("a: "))
b = float(input("b: "))
#intervalo 2
c = float(input("c: "))
d = float(input("d: "))
print("intervalo 1:", a, ".", b, "Intervalo 2:", c, ",", d)
if b >= a and d >= c:
	if (c >= a and c <= d) or (d >= a and d <= b):
		print(1)
	else:
		print(0)
else:
	print(-1)


-- OUTPUT:
intervalo 1: 1.0 . 2.0 Intervalo 2: 4.0 , 5.0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 00:54:11) 
-- CODE:
# Intervalo 1: 
a = float(input("a: "))
b = float(input("b: "))
#intervalo 2
c = float(input("c: "))
d = float(input("d: "))
print("intervalo 1:", a, ".", b, "Intervalo 2:", c, ",", d)
if b >= a and d >= c:
	if (c >= a and c <= d) or (d >= a and d <= b):
		print(1)
	else:
		print(0)
else:
	print(-1)


-- EXECUTION TIME:
0.220183
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
intervalo 1: 1.0 . 2.0 Intervalo 2: 4.0 , 5.0
1
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
intervalo 1: 1.5 . 5.0 Intervalo 2: 2.5 , 3.0
1
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
intervalo 1: -1.0 . -3.0 Intervalo 2: 1.0 , 3.0
-1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 00:54:34) 
-- CODE:
# Intervalo 1: 
a = float(input("a: "))
b = float(input("b: "))
#intervalo 2
c = float(input("c: "))
d = float(input("d: "))
print("intervalo 1:", a, ".", b)
print("Intervalo 2:", c, ",", d)
if b >= a and d >= c:
	if (c >= a and c <= d) or (d >= a and d <= b):
		print(1)
	else:
		print(0)
else:
	print(-1)


-- OUTPUT:
intervalo 1: 1.0 . 2.0
Intervalo 2: 4.0 , 5.0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 00:54:49) 
-- CODE:
# Intervalo 1: 
a = float(input("a: "))
b = float(input("b: "))
#intervalo 2
c = float(input("c: "))
d = float(input("d: "))
print("intervalo 1:", a, ".", b)
print("Intervalo 2:", c, ",", d)
if b >= a and d >= c:
	if (c >= a and c <= d) or (d >= a and d <= b):
		print(1)
	else:
		print(0)
else:
	print(-1)


-- EXECUTION TIME:
0.129401
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
intervalo 1: 1.0 . 2.0
Intervalo 2: 4.0 , 5.0
1
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
intervalo 1: 1.5 . 5.0
Intervalo 2: 2.5 , 3.0
1
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
intervalo 1: -1.0 . -3.0
Intervalo 2: 1.0 , 3.0
-1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 01:00:01) 
-- CODE:
# Intervalo 1: 
a = float(input("a: "))
b = float(input("b: "))
#intervalo 2
c = float(input("c: "))
d = float(input("d: "))
print("intervalo 1:", a, ".", b)
print("Intervalo 2:", c, ",", d)
if (b >= a and d >= c):
	if (c >= a and c <= d) or (d >= a and d <= b):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Entradas invalidas")


-- OUTPUT:
intervalo 1: 1.0 . 2.0
Intervalo 2: 4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 01:00:14) 
-- CODE:
# Intervalo 1: 
a = float(input("a: "))
b = float(input("b: "))
#intervalo 2
c = float(input("c: "))
d = float(input("d: "))
print("intervalo 1:", a, ".", b)
print("Intervalo 2:", c, ",", d)
if (b >= a and d >= c):
	if (c >= a and c <= d) or (d >= a and d <= b):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Entradas invalidas")


-- EXECUTION TIME:
0.118309
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
intervalo 1: 1.0 . 2.0
Intervalo 2: 4.0 , 5.0
Ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
intervalo 1: 1.5 . 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
intervalo 1: -1.0 . -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 01:01:11) 
-- CODE:
# Intervalo 1: 
a = float(input("a: "))
b = float(input("b: "))
#intervalo 2
c = float(input("c: "))
d = float(input("d: "))
print("Entradas:", a, ".", b)
print("Entradas:", c, ",", d)
if (b >= a and d >= c):
	if (c >= a and c <= d) or (d >= a and d <= b):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Entradas invalidas")


-- OUTPUT:
Entradas: 1.0 . 2.0
Entradas: 4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 01:01:35) 
-- CODE:
# Intervalo 1: 
a = float(input("a: "))
b = float(input("b: "))
#intervalo 2
c = float(input("c: "))
d = float(input("d: "))
print("Entradas:", a, ".", b)
print("Entradas:", c, ",", d)
if (b >= a and d >= c):
	if (c >= a and c <= d) or (d >= a and d <= b):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Entradas invalidas")


-- OUTPUT:
Entradas: 1.0 . 2.0
Entradas: 4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 23:21:05) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
print("Intervalo 1:", a, ".", b)
print("Intervalo 2:", c, ",", d)
if (b >= a and d >= c):
	if (c >= a and c <= d) or (d >= a and d <= b):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Entradas invalidas")


-- OUTPUT:
Intervalo 1: 1.0 . 2.0
Intervalo 2: 4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 23:22:07) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
print("Intervalo 1:", a, ".", b)
print("Intervalo 2:", c, ",", d)
if (b >= a and d >= c):
	if (c >= a and c <= d) or (d >= a and d <= b):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Entradas invalidas")


-- EXECUTION TIME:
0.153151
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1: 1.0 . 2.0
Intervalo 2: 4.0 , 5.0
Ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1: 1.5 . 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1: -1.0 . -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 23:23:31) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
print("Intervalo 1:", a, ".", b)
print("Intervalo 2:", c, ",", d)
if (b >= a and d >= c):
	if (c >= a and c <= d) or (d >= a and d <= b):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Entradas invalidas")


-- OUTPUT:
Intervalo 1: 1.0 . 2.0
Intervalo 2: 4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 23:24:27) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
print("Intervalo 1:", a, ".", b)
print("Intervalo 2:", c, ",", d)
if (b >= a and d >= c):
	if (c >= a and c <= d) or (d >= a and d <= b):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Entradas invalidas")


-- EXECUTION TIME:
0.162655
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1: 1.0 . 2.0
Intervalo 2: 4.0 , 5.0
Ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1: 1.5 . 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1: -1.0 . -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 23:56:01) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
print("Intervalo 1:", a, ".", b)
print("Intervalo 2:", c, ",", d)
if (b >= a and d >= c):
	if (c >= a and c <= d) or (d >= a and d <= b):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Entradas invalidas")


-- OUTPUT:
Intervalo 1: 1.0 . 2.0
Intervalo 2: 4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 23:56:47) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
print("Intervalo 1:", a, ".", b)
print("Intervalo 2:", c, ",", d)
if (b >= a and d >= c):
	if (c >= a and c <= d) or (d >= a and d <= b):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Entradas invalidas")


-- EXECUTION TIME:
0.154906
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1: 1.0 . 2.0
Intervalo 2: 4.0 , 5.0
Ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1: 1.5 . 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1: -1.0 . -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 23:59:42) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
print("Intervalo 1:", a, ".", b)
print("Intervalo 2:", c, ",", d)
if (b >= a and d >= c):
	if (c >= a and c <= d) or (d >= a and d <= b):
		print("Ha intersecao")
	else:
		print("Nao ha intersecao")
else:
	print("Entradas invalidas")


-- OUTPUT:
Intervalo 1: 1.0 . 2.0
Intervalo 2: 4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
